[package]
name = "easymouse"
version = "0.1.0"
description = "A tool for accessing the mouse on windows easily in NodeJS"
authors = ["Jacob Allen Morris"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.122"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
